...

                <EditText
                    android:id="@+id/ptPriorConditionsReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/buttonPriorConditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/ptSurgeryReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/ptSurgeryYearReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/buttonSurgery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/ptAllergyReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/buttonAllergy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/ptDrugReactionDrugReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/ptDrugReactionReactionReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/buttonDrugReaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/ptDrugRegimenDrugReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/ptDrugRegimenDosageReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/ptDrugRegimenTimesReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/buttonDrugRegimen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/ptSubstanceReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/buttonSubstance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/ptSmokingReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/buttonSmoking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/ptSmokingValue"
                    android:layout_marginLeft="8dp"
                    android:layout_width="wrap_content"
...

                <EditText
                    android:id="@+id/ptDrinkingReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/buttonDrinking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/ptDrinkingValue"
                    android:layout_marginLeft="8dp"
                    android:layout_width="wrap_content"
...

                <EditText
                    android:id="@+id/ptExerciseReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/buttonExercise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/ptExerciseValue"
                    android:layout_marginLeft="8dp"
                    android:layout_width="wrap_content"
...
