<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textViewDrugs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        android:textSize="18sp" />


</LinearLayout>